# thermal-data-engine

./: .gitignore  AGENTS.md  AGENTS_TEMPLATE.md  Design_draft.md  README.md  TASK_BRIEF_draft.md  pyproject.toml
.agent/: MEMORY.md  TASK_BRIEF.md
configs/data/: clip_policy.yaml
configs/edge/: corpus_verification.yaml  default.yaml  low_memory.yaml  training_sample.yaml
docs/: BOUNDARY_AND_ULTRALYTICS_NOTES.md  ULTRALYTICS_PACKAGE_CHECKLIST.md
docs/agent/tasks/20260415_thermal_validation_slice/: CLOSEOUT.md
docs/agent/tasks/20260427_1744_incoming_handoff_packages/: CLOSEOUT.md  MEMORY.md  TASK_BRIEF.md
docs/agent/tasks/20260430_1515_external_storage_boundary/: CLOSEOUT.md  MEMORY.md  TASK_BRIEF.md
src/thermal_data_engine/: cli.py
src/thermal_data_engine/agent_tools/: __init__.py  inspect.py
src/thermal_data_engine/common/: __init__.py  config.py  io.py  models.py
src/thermal_data_engine/edge/: __init__.py  bundle.py  detections.py  pipeline.py  policy.py  summarizer.py  tracking.py  upload.py
src/thermal_data_engine/vision_api/: __init__.py  client.py
tests/: test_bundle.py  test_config.py  test_inspect.py  test_pipeline.py  test_smoke.py  test_tracking_policy.py  test_vision_api_client.py
