[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-data-engine"
version = "0.1.0"
description = "Offline edge capture and triage scaffold for thermal video bundles"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
parquet = [
  "pyarrow>=10.0.0",
]

[project.scripts]
thermal-data-engine = "thermal_data_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

